Feature: labes and trasition

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <a href="./index.html" class="link"><span class="blue">Web</span>Studio</a>
         </h1>
         <nav>
-          <ul class="navigation">
-            <li class="navigation-item"><a href="#" class="link">Agencja</a></li>
+          <ul class="navigation nav1">
+            <li class="navigation-item"><a href="./index.html" class="link">Agencja</a></li>
             <li class="navigation-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
             <li><a href="#" class="link">Kontakt</a></li>
           </ul>
@@ -126,29 +126,38 @@
         <div class="container">
           <h2>Czym się zajmujemy</h2>
           <ul class="what-we-do-list">
-            <li>
-              <img
-                src="./images/what-we-do-1.jpg"
-                alt="Ręce piszące kod na klawiaturze na podstawie diagramu"
-                width="370"
-                height="294"
-              />
+            <li class="what-we-do-list-item">
+              <figure class="what-we-do-figure">
+                <img
+                  src="./images/what-we-do-1.jpg"
+                  alt="Ręce piszące kod na klawiaturze na podstawie diagramu"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="what-we-do-caption-1">Aplikacje komputerowe</figcaption>
+              </figure>
             </li>
-            <li>
-              <img
-                src="./images/what-we-do-2.jpg"
-                alt="Dłonie trzymające smartfon oraz ekaran laptopa przedstawiający rodzaje układów treści mobilnych"
-                width="370"
-                height="294"
-              />
+            <li class="what-we-do-list-item">
+              <figure class="what-we-do-figure">
+                <img
+                  src="./images/what-we-do-2.jpg"
+                  alt="Dłonie trzymające smartfon oraz ekaran laptopa przedstawiający rodzaje układów treści mobilnych"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="what-we-do-caption-2">Aplikacje mobilne</figcaption>
+              </figure>
             </li>
-            <li>
-              <img
-                src="./images/what-we-do-3.jpg"
-                alt="Dłonie trzymające tablet z wyborem pełnej gamy kolorów"
-                width="370"
-                height="294"
-              />
+            <li class="what-we-do-list-item">
+              <figure class="what-we-do-figure">
+                <img
+                  src="./images/what-we-do-3.jpg"
+                  alt="Dłonie trzymające tablet z wyborem pełnej gamy kolorów"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="what-we-do-caption-3">Rozwiązania graficzne</figcaption>
+              </figure>
             </li>
           </ul>
         </div>
