--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
           <a href="./index.html" class="link"><span class="blue">Web</span>Studio</a>
         </h1>
         <nav>
-          <ul class="navigation">
-            <li class="navigation-item"><a href="#" class="link">Agencja</a></li>
+          <ul class="navigation nav2">
+            <li class="navigation-item"><a href="./index.html" class="link">Agencja</a></li>
             <li class="navigation-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
             <li><a href="#" class="link">Kontakt</a></li>
           </ul>
