Feature: Cards hidden note

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-   <header class="menu">
+    <header class="menu">
       <div class="container">
         <h1 class="logo">
           <a href="./index.html" class="link"><span class="blue">Web</span>Studio</a>
@@ -62,12 +62,19 @@
         <ul class="portfolio-content">
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-1.jpg"
-                alt="Laptop pokazujący stronę internetową Technocrack"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-1.jpg"
+                  alt="Laptop pokazujący stronę internetową Technocrack"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Technocrack
                 <p><span class="grey">Strona internetowa</span></p>
@@ -76,12 +83,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-2.jpg"
-                alt="Koszykarze New Orlean i Golden Star walczący o piłkę"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-2.jpg"
+                  alt="Koszykarze New Orlean i Golden Star walczący o piłkę"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Grafika New Orlean vs Golden Star
                 <p><span class="grey">Dizajn</span></p>
@@ -90,12 +104,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-3.jpg"
-                alt="Logo restauracji Seafood"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-3.jpg"
+                  alt="Logo restauracji Seafood"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Restauracja Seafood
                 <p><span class="grey">Aplikacja</span></p>
@@ -104,7 +125,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img src="./images/Project-4.jpg" alt="Słuchawki nauszne" width="370" height="294" />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-4.jpg"
+                  alt="Słuchawki nauszne"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Projekt Prime
                 <p><span class="grey">Marketing</span></p>
@@ -113,12 +146,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-5.jpg"
-                alt="Trójwymiarowe modele pudełek"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-5.jpg"
+                  alt="Trójwymiarowe modele pudełek"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Projekt Boxes
                 <p><span class="grey">Aplikacja</span></p>
@@ -127,12 +167,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-6.jpg"
-                alt="Monitor pokazujący stronę internetową Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-6.jpg"
+                  alt="Monitor pokazujący stronę internetową Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Inspiration has no Borders
                 <p><span class="grey">Strona internetowa</span></p>
@@ -141,12 +188,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-7.jpg"
-                alt="Otwarty magazyn Limited Edition"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-7.jpg"
+                  alt="Otwarty magazyn Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Magazyn Limited Edition
                 <p><span class="grey">Dizajn</span></p>
@@ -155,12 +209,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-8.jpg"
-                alt="Projekt zawieszki LABELTAG"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-8.jpg"
+                  alt="Projekt zawieszki LABELTAG"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Projekt LAB
                 <p><span class="grey">Marketing</span></p>
@@ -169,12 +230,19 @@
           </li>
           <li class="portfolio-content-list">
             <figure class="portfolio-content-figure">
-              <img
-                src="./images/Project-9.jpg"
-                alt="Przedstawiona na laptopie aplikacja Growing Business"
-                width="370"
-                height="294"
-              />
+              <div class="skrytka-box">
+                <img
+                  src="./images/Project-9.jpg"
+                  alt="Przedstawiona na laptopie aplikacja Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <p class="skrytka">
+                  Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                  koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                  niezabezpieczone serwery konkurencji
+                </p>
+              </div>
               <figcaption class="portfolio-caption">
                 Growing Business
                 <p><span class="grey">Aplikacja</span></p>
@@ -184,7 +252,7 @@
         </ul>
       </div>
     </main>
-     <footer>
+    <footer>
       <div class="container">
         <section class="footer-address">
           <h2 class="footer-logo">
